UI/Ux changes 22/3/2018 Added Remember Password and added logos

--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -11,11 +11,12 @@
         android:id="@+id/DevicePasswordField"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="88dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="Device Password"
         android:inputType="textPassword"
         android:maxLength="10"
@@ -24,18 +25,18 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/LinkDevice"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/DeviceField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="Device ID"
         android:inputType="textPersonName"
         android:maxLength="10"
@@ -44,7 +45,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/DevicePasswordField"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -67,22 +68,24 @@
         android:layout_height="164dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/deviceid" />
 
     <TextView
         android:id="@+id/CurrentDevice"
-        android:layout_width="166dp"
+        android:layout_width="250dp"
         android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="64dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
