--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -13,7 +13,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="182dp"
+        android:layout_marginTop="252dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -21,7 +21,7 @@
         android:textColorHint="#A9A9A9"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +31,7 @@
         android:layout_height="25dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="262dp"
         app:layout_constraintEnd_toStartOf="@+id/EmailField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/ResetPassword"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginBottom="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -59,16 +59,27 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
-        android:layout_marginBottom="438dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="181dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="255dp"
         app:layout_constraintEnd_toStartOf="@+id/ResetPasswordField"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/line2" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/ResetPasswordField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/reset" />
 
 </android.support.constraint.ConstraintLayout>
