--- a/app/src/main/res/layout/analysis_item.xml
+++ b/app/src/main/res/layout/analysis_item.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-condensed"
         android:text="TextView"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="14sp" />
 
     <ImageView
