--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -8,6 +8,23 @@
     android:background="#000C1F"
     tools:context="com.example.ankit.awareness.MyAccountActivity">
 
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/MonthlyTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="160dp"
+            android:textColor="@android:color/white"/>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
     <RelativeLayout
 
         android:layout_width="match_parent"
