--- a/app/src/main/res/layout/analysis_item.xml
+++ b/app/src/main/res/layout/analysis_item.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/analysis_item_text"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="12dp"
@@ -23,12 +23,12 @@
     <ImageView
         android:id="@+id/animation_item_image"
         android:layout_width="25dp"
-        android:layout_height="17dp"
+        android:layout_height="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/analysis_item_text"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="5dp"
         android:background="@android:color/background_light"
-        app:srcCompat="@android:drawable/screen_background_light"
-        android:layout_marginEnd="16dp"
-        android:layout_alignTop="@+id/analysis_item_text"
-        android:layout_alignParentEnd="true" />
+        app:srcCompat="@android:drawable/screen_background_light" />
 
 </RelativeLayout>
