--- a/app/src/main/res/layout/live_item.xml
+++ b/app/src/main/res/layout/live_item.xml
@@ -13,11 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/live_item_image"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-condensed"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="14sp" />
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/live_item_image"
